--- a/papers.html
+++ b/papers.html
@@ -15,6 +15,14 @@
             <div class="section-heading"><h2>Publications</h2></div>
                 &#9824 Mentored Intern/Student
                 <ul>
+                    <li>
+                        <div class="paper">
+                            <div class="title"><text id="small-caps"> Agent-DocEdit: Language-Instructed LLM Agent for Content-Rich Document Editing </a></text></div>
+                            <div class="authors"> Te-Lin Wu, Rajiv Jain, <b>Yufan Zhou</b>, Puneet Mathur, Vlad I Morariu.</div>
+                            <div class="venue"> <i>First Conference on Language Modeling </i> (<b>CoLM</b>), 2024.</div>
+                        </div>
+                    </li>
+                    <br>
 
                     <li>
                         <div class="paper">
