--- a/web.html
+++ b/web.html
@@ -56,6 +56,7 @@
             <hr>
             <div class="section-heading"><h2>News</h2></div>
                 <ul>
+                    <li>One paper accepted by CoLM 2024.</li>
                     <li>One paper accepted by ACL 2024.</li>
                     <li>Two papers accepted by CVPR 2024.</li>
                     <li>One paper accepted by ICLR 2024.</li>
