--- a/web.html
+++ b/web.html
@@ -50,12 +50,14 @@
                     I worked as a Research Intern with <a href = "http://chunyuan.li/"  target="_blank">Chunyuan Li</a> (Microsoft), <a href = "https://zhangry868.github.io/"  target="_blank">Ruiyi Zhang</a> (Adobe), <a href="https://scholar.google.com/citations?user=uKdv6SUAAAAJ&hl=en"  target="_blank">Bingchen Liu</a> (ByteDance).
                 </p>
                 <p>
-                    Self-motivated students who are interested in interning at Adobe, or seeking research collaborations, feel free to reach out to me.
+                    Students who are interested in interning at Adobe, or seeking research collaborations, feel free to reach out to me.
                 </p>
 
             <hr>
             <div class="section-heading"><h2>News</h2></div>
                 <ul>
+                    <li>One paper accepted by WACV 2025.</li>
+                    <li>One paper accepted by EMNLP 2024.</li>
                     <li>One paper accepted by CoLM 2024.</li>
                     <li>One paper accepted by ACL 2024.</li>
                     <li>Two papers accepted by CVPR 2024.</li>
@@ -147,9 +149,9 @@
             <div class="section-heading"><h2>Professional Service</h2></div>
                 <ul>
                     <li>
-                        Conferences Program Committee/Reviewer: NeurIPS 2020, 2021, 2022, 2023; ICML 2021, 2022, 2023, 2024; ICLR 2022, 2023, 2024; CVPR 2023, 2024; AISTATS 2021; AAAI 2021, 2022; IJCAI 2021; EMNLP 2022, 2023; ECCV 2024; ACL 2023;
+                        Conferences Program Committee/Reviewer: NeurIPS 2020, 2021, 2022, 2023, 2024; ICML 2021, 2022, 2023, 2024; ICLR 2022, 2023, 2024; CVPR 2023, 2024; AISTATS 2021; AAAI 2021, 2022; IJCAI 2021; EMNLP 2022, 2023; ECCV 2024; ACL 2023;
                     <li>
-                        Journal Reviewer: IEEE Transactions on Neural Networks and learning systems;  IEEE Transactions on Circuits and Systems for Video Technology;
+                        Journal Reviewer: IEEE Transactions on Pattern Analysis and Machine Intelligence; IEEE Transactions on Neural Networks and Learning Systems;  IEEE Transactions on Circuits and Systems for Video Technology;
                     </li>
 
                 </ul>
