--- a/papers.html
+++ b/papers.html
@@ -17,6 +17,25 @@
                 <ul>
                     <li>
                         <div class="paper">
+                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/pdf/2406.12044">ARTIST: Improving Generation of Text-rich Images by Disentanglement</a></text></div>
+                            <div class="authors"> Jianyi Zhang<sup>&#9824</sup>, <b>Yufan Zhou</b>, Jiuxiang Gu, Curtis Wigington, Tong Yu, Yiran Chen, Tong Sun, Ruiyi Zhang. </div>
+                            <div class="abs"><font color="#00539CFF"> Improve text rendering ability of text-to-image diffusion model.</font></i></div>
+                            <div class="venue"> <i> IEEE/CVF Winter Conference on Applications of Computer Vision </i> (<b>WACV</b>), 2025.</div>
+                        </div>
+                    </li>
+                    <br>
+
+                    <li>
+                        <div class="paper">
+                            <div class="title"><text id="small-caps"> Customizing Language Models for Text-to-Layout Planning </a></text></div>
+                            <div class="authors"> Jian Chen, Ruiyi Zhang, <b>Yufan Zhou</b>, Jennifer Healey, Jiuxiang Gu, Changyou Chen.</div>
+                            <div class="venue"> <i> Empirical Methods in Natural Language Processing </i> (<b>EMNLP</b>), 2024.</div>
+                        </div>
+                    </li>
+                    <br>
+
+                    <li>
+                        <div class="paper">
                             <div class="title"><text id="small-caps"> Agent-DocEdit: Language-Instructed LLM Agent for Content-Rich Document Editing </a></text></div>
                             <div class="authors"> Te-Lin Wu, Rajiv Jain, <b>Yufan Zhou</b>, Puneet Mathur, Vlad I Morariu.</div>
                             <div class="venue"> <i>First Conference on Language Modeling </i> (<b>CoLM</b>), 2024.</div>
@@ -186,14 +205,6 @@
                     </li>
                     <br>
 
-                    <li>
-                        <div class="paper">
-                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/pdf/2406.12044">ARTIST: Improving Generation of Text-rich Images by Disentanglement</a></text></div>
-                            <div class="authors"> Jianyi Zhang<sup>&#9824</sup>, <b>Yufan Zhou</b>, Jiuxiang Gu, Curtis Wigington, Tong Yu, Yiran Chen, Tong Sun, Ruiyi Zhang. </div>
-                            <div class="abs"><font color="#00539CFF"> Improve text rendering ability of text-to-image diffusion model.</font></i></div>
-                        </div>
-                    </li>
-                    <br>
 
                     <li>
                         <div class="paper">
