--- a/papers.html
+++ b/papers.html
@@ -13,12 +13,11 @@
 
     <body>
             <div class="section-heading"><h2>Publications</h2></div>
-                &#9824 Mentored Intern/Student
                 <ul>
                     <li>
                         <div class="paper">
                             <div class="title"><text id="small-caps"> <a href="https://arxiv.org/pdf/2406.12044">ARTIST: Improving Generation of Text-rich Images by Disentanglement</a></text></div>
-                            <div class="authors"> Jianyi Zhang<sup>&#9824</sup>, <b>Yufan Zhou</b>, Jiuxiang Gu, Curtis Wigington, Tong Yu, Yiran Chen, Tong Sun, Ruiyi Zhang. </div>
+                            <div class="authors"> Jianyi Zhang, <b>Yufan Zhou</b>, Jiuxiang Gu, Curtis Wigington, Tong Yu, Yiran Chen, Tong Sun, Ruiyi Zhang. </div>
                             <div class="abs"><font color="#00539CFF"> Improve text rendering ability of text-to-image diffusion model.</font></i></div>
                             <div class="venue"> <i> IEEE/CVF Winter Conference on Applications of Computer Vision </i> (<b>WACV</b>), 2025.</div>
                         </div>
@@ -193,8 +192,16 @@
 
             <hr>
             <div class="section-heading"><h2>Manuscripts/Preprints</h2></div>
-                &#9824 Mentored Intern/Student
                 <ul>
+                    <li>
+                        <div class="paper">
+                            <div class="title"><text id="small-caps"> <a href="https://drboog.github.io/SUGAR">SUGAR: Subject-Driven Video Customization in a Zero-Shot Manner</a></text></div>
+                            <div class="authors"> <b>Yufan Zhou</b>, Ruiyi Zhang, Jiuxiang Gu, Nanxuan Zhao, Jing Shi, Tong Sun. </div>
+                            <div class="abs"><font color="#00539CFF">A zero-shot method for video customization, which can generate creative videos for user-input subject image, with desired style, color, texture, background required by user-input text.</font></i></div>
+                            <div class="abs_photo"><img src="./index_files/resized_image_1.gif"  class="center"  width="500" height="250"></div>
+                        </div>
+                    </li>
+                    <br>
 
                     <li>
                         <div class="paper">
