--- a/web.html
+++ b/web.html
@@ -56,6 +56,7 @@
             <hr>
             <div class="section-heading"><h2>News</h2></div>
                 <ul>
+                    <li>One paper accepted by AAAI 2025.</li>
                     <li>One paper accepted by WACV 2025.</li>
                     <li>One paper accepted by EMNLP 2024.</li>
                     <li>One paper accepted by CoLM 2024.</li>
@@ -67,6 +68,16 @@
 
             <div class="section-heading"><h2>Selected Papers <a href="./papers.html">[More]</a></h2> </div>
                 <ul>
+                    <li>
+                        <div class="paper">
+                            <div class="title"><text id="small-caps"> <a href="https://drboog.github.io/SUGAR">SUGAR: Subject-Driven Video Customization in a Zero-Shot Manner</a></text></div>
+                            <div class="authors"> <b>Yufan Zhou</b>, Ruiyi Zhang, Jiuxiang Gu, Nanxuan Zhao, Jing Shi, Tong Sun. </div>
+                            <div class="abs"><font color="#00539CFF">A zero-shot method for video customization, which can generate creative videos for user-input subject image, with desired style, color, texture, background required by user-input text.</font></i></div>
+                            <div class="abs_photo"><img src="./index_files/resized_image_1.gif"  class="center"  width="600" height="300"></div>
+                        </div>
+                    </li>
+                    <br>
+
                     <li>
                         <div class="paper">
                             <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2406.09305">Toffee: Efficient Million-Scale Dataset Construction for Subject-Driven Text-to-Image Generation</a></text></div>
@@ -149,7 +160,7 @@
             <div class="section-heading"><h2>Professional Service</h2></div>
                 <ul>
                     <li>
-                        Conferences Program Committee/Reviewer: NeurIPS 2020, 2021, 2022, 2023, 2024; ICML 2021, 2022, 2023, 2024; ICLR 2022, 2023, 2024; CVPR 2023, 2024; AISTATS 2021; AAAI 2021, 2022; IJCAI 2021; EMNLP 2022, 2023; ECCV 2024; ACL 2023;
+                        Conferences Program Committee/Reviewer: NeurIPS; ICML; ICLR; CVPR; AISTATS; AAAI; IJCAI; EMNLP; ECCV; ACL;
                     <li>
                         Journal Reviewer: IEEE Transactions on Pattern Analysis and Machine Intelligence; IEEE Transactions on Neural Networks and Learning Systems;  IEEE Transactions on Circuits and Systems for Video Technology;
                     </li>
